Added specyfic jsHint linter config

--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
     "exorcist": "^0.1.6",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^2.6.0"
+  },
+  // specyfic jsHint settings
+  "jshintConfig": {
+    // allow ES6
+    "esnext": true,
+    "browserify": true,
   }
 }
