--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "js-dev-stack",
   "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
+  "description": "Simple example of modern js frontend development stack",
   "scripts": {
     "build-dev": "tools/build-dev",
     "watch": "tools/watch"
   },
   "author": "Tomasz Szopiński",
-  "license": "ISC",
   "devDependencies": {
     "babel": "^4.7.16",
     "babelify": "^5.0.4",
     "browserify": "^9.0.3",
     "exorcist": "^0.1.6",
-    "vinyl-source-stream": "^1.1.0",
     "watchify": "^2.6.0"
   },
   "jshintConfig": {
